reorganize code, move callback implementation

--- a/ui-src/index.html
+++ b/ui-src/index.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <script type="module" src="./app.js"></script>
+    <h1>Omniverse Stylesgen Plugin</h1>
+    <p>Use the custom actions Frame!</p>
   </body>
 </html>
