Auto downloading files is working!

--- a/ui-src/index.html
+++ b/ui-src/index.html
@@ -7,6 +7,6 @@
   <body>
     <script type="module" src="./app.js"></script>
     <h1>Omniverse Stylesgen Plugin</h1>
-    <p>Use the custom actions Frame!</p>
+    <a id="download" disabled>Download</a>
   </body>
 </html>
