--- a/ui-src/index.html
+++ b/ui-src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <script type="module" src="./app.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
+<body>
+  <script type="module" src="./app.js"></script>
+  <div id="download-wrapper">
     <h1>Omniverse Stylesgen Plugin</h1>
-    <a id="download" disabled>Download</a>
-  </body>
+    <p>Click to Download the design files</p>
+    <a id="download">💾 omniverse_design_files.zip</a>
+  </div>
+</body>
+
 </html>
